--- a/firebase.json
+++ b/firebase.json
@@ -43,9 +43,9 @@
     "hosting": {
       "port": 5000
     },
-    "pubsub": {
-      "port": 8085
-    },
+    // "pubsub": {
+    //   "port": 8085
+    // },
     "storage": {
       "port": 9199
     },
