--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular-devkit/schematics": "~19.2.0",
     "@angular/cli": "~19.2.0",
     "@angular/compiler-cli": "~19.2.0",
+    "@angular/fire": "^19.1.0",
     "@angular/language-service": "~19.2.0",
     "@eslint/js": "^9.8.0",
     "@nx/angular": "21.0.3",
