--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@angular/platform-browser": "~19.2.0",
     "@angular/platform-browser-dynamic": "~19.2.0",
     "@angular/router": "~19.2.0",
+    "@ngrx/signals": "^19.2.0",
     "firebase": "^10.10.0",
     "firebase-admin": "^11.11.1",
     "firebase-functions": "^4.8.2",
