--- a/libs/features/catalog/project.json
+++ b/libs/features/catalog/project.json
@@ -2,7 +2,7 @@
   "name": "catalog",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/features/catalog/src",
-  "prefix": "lib",
+  "prefix": "my-health",
   "projectType": "library",
   "tags": [],
   "targets": {
