--- a/libs/shared/project.json
+++ b/libs/shared/project.json
@@ -2,7 +2,7 @@
   "name": "shared",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/shared/src",
-  "prefix": "lib",
+  "prefix": "my-health",
   "projectType": "library",
   "tags": [],
   "targets": {
