--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@angular/cdk": "~19.2.17",
     "@angular/common": "~19.2.0",
     "@angular/compiler": "~19.2.0",
     "@angular/core": "~19.2.0",
     "@angular/forms": "~19.2.0",
+    "@angular/material": "~19.2.17",
     "@angular/platform-browser": "~19.2.0",
     "@angular/platform-browser-dynamic": "~19.2.0",
     "@angular/router": "~19.2.0",
@@ -29,6 +31,7 @@
     "@angular/compiler-cli": "~19.2.0",
     "@angular/fire": "^19.1.0",
     "@angular/language-service": "~19.2.0",
+    "@angular/material": "^19.2.17",
     "@eslint/js": "^9.8.0",
     "@nx/angular": "21.0.3",
     "@nx/devkit": "21.0.3",
@@ -72,6 +75,7 @@
     "postcss": "^8.4.5",
     "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
