--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/platform-browser": "~19.2.0",
     "@angular/platform-browser-dynamic": "~19.2.0",
     "@angular/router": "~19.2.0",
+    "@angular/fire": "18.0.1",
     "@ngrx/signals": "^19.2.0",
     "firebase": "^10.10.0",
     "firebase-admin": "^11.11.1",
@@ -29,9 +30,7 @@
     "@angular-devkit/schematics": "~19.2.0",
     "@angular/cli": "~19.2.0",
     "@angular/compiler-cli": "~19.2.0",
-    "@angular/fire": "^19.1.0",
     "@angular/language-service": "~19.2.0",
-    "@angular/material": "^19.2.17",
     "@eslint/js": "^9.8.0",
     "@nx/angular": "21.0.3",
     "@nx/devkit": "21.0.3",
