--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,7 @@
     "paths": {
       "@my-health/domain": ["libs/domain/src/index.ts"],
       "@my-health/features/auth": ["libs/features/auth/src/index.ts"],
+      "@my-health/features/auth-api": ["libs/features/auth-api/src/index.ts"],
       "@my-health/features/catalog": ["libs/features/catalog/src/index.ts"],
       "@my-health/shared": ["libs/shared/src/index.ts"]
     }
