--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,6 +19,7 @@
       "@my-health/features/auth": ["libs/features/auth/src/index.ts"],
       "@my-health/features/auth-api": ["libs/features/auth-api/src/index.ts"],
       "@my-health/features/catalog": ["libs/features/catalog/src/index.ts"],
+      "@my-health/features/dashboard": ["libs/features/dashboard/src/index.ts"],
       "@my-health/shared": ["libs/shared/src/index.ts"]
     }
   },
