--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,6 +20,7 @@
       "@my-health/features/auth-api": ["libs/features/auth-api/src/index.ts"],
       "@my-health/features/catalog": ["libs/features/catalog/src/index.ts"],
       "@my-health/features/dashboard": ["libs/features/dashboard/src/index.ts"],
+      "@my-health/features/reports": ["libs/features/reports/src/index.ts"],
       "@my-health/shared": ["libs/shared/src/index.ts"]
     }
   },
