--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,34 @@ permissions:
   contents: read
 
 jobs:
-  main:
+  test:
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          filter: tree:0
+          fetch-depth: 0
+
+      # Cache node_modules
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'npm'
+
+      - run: npm ci --legacy-peer-deps
+      - uses: nrwl/nx-set-shas@v4
+
+      # Testowanie modułu catalog
+      - name: Test Catalog Module
+        run: npx nx test catalog
+
+      # Lint dla affected projects
+      - name: Lint Affected Projects
+        run: npx nx affected -t lint
+
+  build:
+    runs-on: ubuntu-latest
+    needs: test
     steps:
       - uses: actions/checkout@v4
         with:
@@ -34,17 +60,8 @@ jobs:
           cache: 'npm'
 
       - run: npm ci --legacy-peer-deps
-      - run: npx playwright install --with-deps
       - uses: nrwl/nx-set-shas@v4
-
-      # Testowanie modułu catalog
-      - name: Test Catalog Module
-        run: npx nx test catalog
 
       # Build głównej aplikacji my-health
       - name: Build Main Application
         run: npx nx build my-health
-
-      # Lint dla affected projects
-      - name: Lint Affected Projects
-        run: npx nx affected -t lint
