Update Angular component styles to SCSS, remove unused documentation files, and clean up component structure

--- a/nx.json
+++ b/nx.json
@@ -84,7 +84,7 @@
       "unitTestRunner": "vitest"
     },
     "@nx/angular:component": {
-      "style": "css"
+      "style": "scss"
     }
   }
 }
